--- a/appsettings.json
+++ b/appsettings.json
@@ -2,6 +2,11 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=(LocalDb)\\MSSQLLocalDB;Initial Catalog=LanchesDB; Integrated Security=True"
   },
+  "UserSettings": {
+    "UserName": "walsirujo",
+    "UserEmail": "walsirujo@hotmail.com",
+    "UserPassword": "Wsa3921*"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
